--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 omneer/processing/test/*
-omneer/data/extra/**
+omneer/data/extra/*
 omneer/omneer.egg-info
-omneer/data/*
+omneer/data/**
+omneer/data/preprocessing/*
+
